# claude_verilog_test

./: .gitignore  .pre-commit-config.yaml  .pylintrc  CLAUDE.md  CLEANUP_SUMMARY.md  COCOTB_SETUP_SUMMARY.md  PRE_COMMIT_SETUP_SUMMARY.md  QUICKSTART_PRECOMMIT.md  RANDOM_TESTS_STATUS.md  README.md  TODO_PHASE1_VERIFICATION.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: BADGES.md  CI_SETUP.md  PRE_COMMIT_SETUP.md  QA_WORKFLOW_DIAGRAM.md  README.md  WORKFLOW_TRIGGERS.md
.github/instructions/: codacy.instructions.md
.github/workflows/: qa-checks.yml  tests.yml
docs/: PHASE_STATUS.md  ROADMAP.md
docs/archive/: COCOTB_SETUP_SUMMARY.md  PRE_COMMIT_SETUP_SUMMARY.md  QUICKSTART_PRECOMMIT.md  README.md  SESSION_SUMMARY.md
docs/design/: DESIGN_EXPECTATION.md  GPU_MODEL.md  MEMORY_MAP.md  OPENROAD_FLOW_SPEC.md  PHASE0_ARCHITECTURE_SPEC.md  PHASE1_ARCHITECTURE_SPEC.md  PHASE4_GPU_ARCHITECTURE_SPEC.md  REFERENCE_MODEL_SPEC.md  RTL_DEFINITION.md  SDC_TIMING_SPEC.md  UPF_POWER_SPEC.md
docs/development/: CONTROL_SIGNALS_ANALYSIS.md  LOCAL_QA_SETUP.md  PHASE1_AI_HUMAN_RESPONSIBILITIES.md
docs/pyuvm_migration/: MIGRATION_STATUS.md
fixes/: EBREAK_BUG_FIX.md  FIXES_INDEX.md  PC_MISMATCH_FIX.md  README.md  RTL_BUG_FIXES.md  RTL_DEBUG_REPORT.md  RTL_ISA_TEST_FIX.md  TEST_FIX_SUMMARY.md  TIMING_ANALYSIS.md
pnr/: .gitignore  Makefile  README.md
pnr/constraints/: INDEX.md  (+10 more)
rtl/: rv32i_cpu_top.sv
sim/: Makefile  Makefile.uvm  main.cpp  main_unit.cpp  riscv_encoder.py
tb/: README.md  __init__.py  apb3_master.sv  axi4lite_mem.sv  tb_rv32i_cpu_top.sv
(+131 files in other folders)
